Allow highlighting of a piece's available moves
I implemented the ability for a square on the checkerboard to be tinted
a certain color to indicate that it is a valid move for the selected
piece. The button's backgroundTint attribute will change based on the
boolean value of key associated with that particular button, which is
stored in an ObservaleArrayMap in the ViewModel.

It was necessary to also set the backgroundTintMode attribute so that
the normal background is visible through argb transparancy instead of
being totally obscured.

Android backgroundTint attribute Documentation:
https://developer.android.com/reference/android/view/View.html#attr_android:backgroundTint

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["01"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,1)}"
                 android:background='@{viewModel.grid["01"] == 0 ? @drawable/board2 : (viewModel.grid["01"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -90,6 +92,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["03"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,3)}"
                 android:background='@{viewModel.grid["03"] == 0 ? @drawable/board2 : (viewModel.grid["03"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -106,6 +110,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["05"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,5)}"
                 android:background='@{viewModel.grid["05"] == 0 ? @drawable/board2 : (viewModel.grid["05"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -121,6 +127,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["07"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,7)}"
                 android:background='@{viewModel.grid["07"] == 0 ? @drawable/board2 : (viewModel.grid["07"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -135,6 +143,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["10"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,0)}"
                 android:background='@{viewModel.grid["10"] == 0 ? @drawable/board2 : (viewModel.grid["10"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -150,6 +160,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["12"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,2)}"
                 android:background='@{viewModel.grid["12"] == 0 ? @drawable/board2 : (viewModel.grid["12"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -165,6 +177,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["14"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,4)}"
                 android:background='@{viewModel.grid["14"] == 0 ? @drawable/board2 : (viewModel.grid["14"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -180,6 +194,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["16"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,6)}"
                 android:background='@{viewModel.grid["16"] == 0 ? @drawable/board2 : (viewModel.grid["16"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -208,6 +224,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["21"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,1)}"
                 android:background='@{viewModel.grid["21"] == 0 ? @drawable/board2 : (viewModel.grid["21"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -223,6 +241,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["23"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,3)}"
                 android:background='@{viewModel.grid["23"] == 0 ? @drawable/board2 : (viewModel.grid["23"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -238,6 +258,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["25"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,5)}"
                 android:background='@{viewModel.grid["25"] == 0 ? @drawable/board2 : (viewModel.grid["25"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -253,6 +275,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["27"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,7)}"
                 android:background='@{viewModel.grid["27"] == 0 ? @drawable/board2 : (viewModel.grid["27"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -267,6 +291,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["30"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,0)}"
                 android:background='@{viewModel.grid["30"] == 0 ? @drawable/board2 : (viewModel.grid["30"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -282,6 +308,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["32"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,2)}"
                 android:background='@{viewModel.grid["32"] == 0 ? @drawable/board2 : (viewModel.grid["32"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -297,6 +325,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["34"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,4)}"
                 android:background='@{viewModel.grid["34"] == 0 ? @drawable/board2 : (viewModel.grid["34"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -312,6 +342,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["36"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,6)}"
                 android:background='@{viewModel.grid["36"] == 0 ? @drawable/board2 : (viewModel.grid["36"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -340,6 +372,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["41"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,1)}"
                 android:background='@{viewModel.grid["41"] == 0 ? @drawable/board2 : (viewModel.grid["41"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -355,6 +389,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["43"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,3)}"
                 android:background='@{viewModel.grid["43"] == 0 ? @drawable/board2 : (viewModel.grid["43"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -370,6 +406,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["45"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,5)}"
                 android:background='@{viewModel.grid["45"] == 0 ? @drawable/board2 : (viewModel.grid["45"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -385,6 +423,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["47"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,7)}"
                 android:background='@{viewModel.grid["47"] == 0 ? @drawable/board2 : (viewModel.grid["47"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -399,6 +439,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["50"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,0)}"
                 android:background='@{viewModel.grid["50"] == 0 ? @drawable/board2 : (viewModel.grid["50"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -414,6 +456,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["52"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,2)}"
                 android:background='@{viewModel.grid["52"] == 0 ? @drawable/board2 : (viewModel.grid["52"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -429,6 +473,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["54"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,4)}"
                 android:background='@{viewModel.grid["54"] == 0 ? @drawable/board2 : (viewModel.grid["54"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -444,6 +490,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["56"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,6)}"
                 android:background='@{viewModel.grid["56"] == 0 ? @drawable/board2 : (viewModel.grid["56"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -472,6 +520,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["61"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,1)}"
                 android:background='@{viewModel.grid["61"] == 0 ? @drawable/board2 : (viewModel.grid["61"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -487,6 +537,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["63"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,3)}"
                 android:background='@{viewModel.grid["63"] == 0 ? @drawable/board2 : (viewModel.grid["63"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -502,6 +554,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["65"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,5)}"
                 android:background='@{viewModel.grid["65"] == 0 ? @drawable/board2 : (viewModel.grid["65"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -517,6 +571,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["67"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,7)}"
                 android:background='@{viewModel.grid["67"] == 0 ? @drawable/board2 : (viewModel.grid["67"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -531,6 +587,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["70"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,0)}"
                 android:background='@{viewModel.grid["70"] == 0 ? @drawable/board2 : (viewModel.grid["70"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -546,6 +604,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["72"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,2)}"
                 android:background='@{viewModel.grid["72"] == 0 ? @drawable/board2 : (viewModel.grid["72"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -561,6 +621,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["74"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,4)}"
                 android:background='@{viewModel.grid["74"] == 0 ? @drawable/board2 : (viewModel.grid["74"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
@@ -576,6 +638,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:backgroundTint='@{viewModel.availableMoves["76"] ? @color/buttonHighlight : @color/transparent}'
+                android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,6)}"
                 android:background='@{viewModel.grid["76"] == 0 ? @drawable/board2 : (viewModel.grid["76"] == 1 ? @drawable/board2wb : @drawable/board2wr)}'
                 android:layout_weight="1"/>
