--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="textColorPrimary">#000000</color>
     <color name="textColorHighlight">#f9a825</color>
+    <color name="transparent">#00000000</color>
+    <color name="buttonHighlight">#85f9a825</color>
 </resources>
