Show Kings with crown overlay
I added another observable to track which pieces are Kings. Changes to
this observable change the Image Button's `foreground` attribute.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["01"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["01"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,1)}"
@@ -92,6 +93,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["03"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["03"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,3)}"
@@ -110,6 +112,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["05"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["05"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,5)}"
@@ -127,6 +130,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["07"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["07"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(0,7)}"
@@ -143,6 +147,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["10"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["10"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,0)}"
@@ -160,6 +165,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["12"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["12"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,2)}"
@@ -177,6 +183,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["14"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["14"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,4)}"
@@ -194,6 +201,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["16"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["16"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(1,6)}"
@@ -224,6 +232,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["21"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["21"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,1)}"
@@ -241,6 +250,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["23"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["23"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,3)}"
@@ -258,6 +268,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["25"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["25"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,5)}"
@@ -275,6 +286,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["27"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["27"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(2,7)}"
@@ -291,6 +303,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["30"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["30"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,0)}"
@@ -308,6 +321,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["32"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["32"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,2)}"
@@ -325,6 +339,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["34"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["34"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,4)}"
@@ -342,6 +357,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["36"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["36"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(3,6)}"
@@ -372,6 +388,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["41"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["41"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,1)}"
@@ -389,6 +406,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["43"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["43"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,3)}"
@@ -406,6 +424,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["45"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["45"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,5)}"
@@ -423,6 +442,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["47"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["47"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(4,7)}"
@@ -439,6 +459,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["50"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["50"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,0)}"
@@ -456,6 +477,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["52"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["52"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,2)}"
@@ -473,6 +495,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["54"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["54"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,4)}"
@@ -490,6 +513,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["56"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["56"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(5,6)}"
@@ -520,6 +544,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["61"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["61"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,1)}"
@@ -537,6 +562,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["63"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["63"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,3)}"
@@ -554,6 +580,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["65"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["65"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,5)}"
@@ -571,6 +598,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["67"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["67"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(6,7)}"
@@ -587,6 +615,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["70"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["70"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,0)}"
@@ -604,6 +633,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["72"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["72"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,2)}"
@@ -621,6 +651,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["74"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["74"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,4)}"
@@ -638,6 +669,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:textSize="30sp"
+                android:foreground='@{safeUnbox(viewModel.kingTracker["76"]) ? @drawable/kings_crown : @drawable/clear}'
                 android:backgroundTint='@{safeUnbox(viewModel.availableMoves["76"]) ? @color/buttonHighlight : @color/transparent}'
                 android:backgroundTintMode="src_over"
                 android:onClick="@{() -> viewModel.onCellClickedAt(7,6)}"
