--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="textColorHighlight">#f9a825</color>
     <color name="transparent">#00000000</color>
     <color name="buttonHighlight">#85f9a825</color>
+    <drawable name="clear">#00000000</drawable>
 </resources>
