Add Menu Options to Select Human/Bot Opponent
I changed the menu to have 2 different options instead of the just one
New Game option. The user can select if he wants to "Play Against a
Friend" or "Play Against the Bot".

Depending on the selection, a new Game is started with either 2 Humans
or 1 Human and 1 Bot.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,9 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item_new_game"
+        android:id="@+id/item_new_human_game"
         android:enabled="true"
-        android:title="New Game"
+        android:title="Play Against a Friend"
+        android:visible="true" />
+    <item
+        android:id="@+id/item_new_bot_game"
+        android:enabled="true"
+        android:title="Play Against the Bot"
         android:visible="true" />
     <item
         android:id="@+id/item_restart_game"
